# ResourceMonitor

./: .gitignore  CMakeLists.txt  README.md
core/: CMakeLists.txt
core/include/core/: providers.h  snapshot.h  structs.h
core/private_include/: snapshot_builder.h
core/src/: snapshot_builder.cpp
monitord/: CMakeLists.txt
monitord/src/: main.cpp
platform/: CMakeLists.txt
platform/include/platform/: factories.h
platform/linux/: cpu_collector.cpp  memory_collector.cpp  process_collector.cpp
platform/private_include/: parsers.h
tests/: CMakeLists.txt  test_platform_linux.cpp  test_process_collector.cpp  test_snapshot_builder.cpp
